--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
             // --- INTRODUCTION & BRANDING FIELDS ---
             photoUrl: "https://placehold.co/150x150/BA0C2F/FFFFFF/png?text=RILEY+C", // Replace with a URL to a professional headshot
             logoUrl: "https://placehold.co/40x40/BA0C2F/FFFFFF.png?text=BSU", // URL for your school logo or personal brand icon
-            personalBio: "I am a sophomore driven by teamwork and problem solving. I strive In High tense situations and love to collabrate idead .",
-            missionStatement: "To build digital solutions that simplify complex processes and empower small businesses, leveraging Python, front-end frameworks, and a user-first design approach.",
+            personalBio: "I am a freshman driven by teamwork and problem solving. I strive In High tense situations and love to collabrate idead .",
+            missionStatement: "I strive for improvment and always learn from my experiences .",
         };
 
         /*
@@ -279,9 +279,9 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
 
         // 1.2 ACADEMICS (REQUIRED: Add relevant classes)
         const academicData = [
-            { name: "Intro to Python Programming", grade: "A", semester: "Fall 2024", relevance: "Code" },
-            { name: "Digital Design Principles", grade: "A-", semester: "Fall 2024", relevance: "Design" },
-            { name: "Calculus I", grade: "B+", semester: "Fall 2024", relevance: "Foundational" },
+            { name: "ISOM", grade: "A", semester: "Fall 2025", relevance: "Code" },
+            { name: "Econ", grade: "B", semester: "Fall 2025", relevance: "Design" },
+            { name: "History", grade: "A", semester: "Fall 2025", relevance: "Foundational" },
             { name: "Web Development (Front-End)", grade: "A", semester: "Spring 2025", relevance: "Code" },
             { name: "Data Structures", grade: "In Progress", semester: "Current", relevance: "Code" },
         ];
@@ -289,19 +289,19 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
         // 1.3 PROJECTS (REQUIRED: Follow C-S-R format)
         const projectData = [
             {
-                title: "Local Charity Website Redesign",
-                category: "Design",
-                challenge: "The local Humane Society site was not mobile-friendly, resulting in high bounce rates on the donation page.",
-                solution: "Designed and implemented a responsive, user-centered interface using HTML, Tailwind CSS, and vanilla JS.",
-                result: "Increased mobile conversion rate by **15%** and reduced bounce rate by **22%** in the first month.",
+                title: "High School digital advidtiser",
+                category: "Job",
+                challenge: "Create fun new desgins in minutes .",
+                solution: "Brain stromed with others and used collabration techniquienes.",
+                result: "I created social media posts for all athletic teams.",
                 link: "https://github.com/riley/charity-site"
             },
             {
-                title: "Twitter Sentiment Analyzer (Academic)",
-                category: "Code",
-                challenge: "Required to analyze public sentiment towards a political topic using programming tools for a final project.",
-                solution: "Used Python (Pandas/Matplotlib) to clean data and built a basic Naive Bayes classification model.",
-                result: "Achieved **82%** accuracy in classifying positive/negative tweets, earning the highest grade in the class (A).",
+                title: "DEAC",
+                category: "Competition",
+                challenge: "Solve complex problems on the fly with teammates .",
+                solution: "communcating and problem solving .",
+                result: "Placed nationally at a competition in ordlando.",
                 link: ""
             },
             {
@@ -576,4 +576,5 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
