--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
             // --- INTRODUCTION & BRANDING FIELDS ---
             photoUrl: "https://placehold.co/150x150/BA0C2F/FFFFFF/png?text=RILEY+C", // Replace with a URL to a professional headshot
             logoUrl: "https://placehold.co/40x40/BA0C2F/FFFFFF.png?text=BSU", // URL for your school logo or personal brand icon
-            personalBio: "I am a freshman driven by teamwork and problem solving. I strive In High tense situations and love to collabrate idead .",
+            personalBio: "I am a freshman driven by teamwork and problem solving. I strive In High tense situations and love to collabrate ideadas .",
             missionStatement: "I strive for improvment and always learn from my experiences .",
         };
 
@@ -576,5 +576,6 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
 
